--- a/malaria_detection.ipynb
+++ b/malaria_detection.ipynb
@@ -11,7 +11,8 @@
         "YaVWbAH2gFY2",
         "qU-29V0L7XrS"
       ],
-      "authorship_tag": "ABX9TyPA1YeNaMF8qQOTigM232NQ",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyOlmlex+N+h+0OOgNJGXk5m",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -36,27 +37,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## **WandB install, Login, Initialization and Configuration**"
-      ],
-      "metadata": {
-        "id": "WUFpBVTTXKf8"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "pass"
-      ],
-      "metadata": {
-        "id": "tCddmZWTaFPi"
-      },
-      "execution_count": 5,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "## **Import Libraries**"
+        "# **Import Libraries**"
       ],
       "metadata": {
         "id": "Em7E5eTENx8c"
@@ -65,6 +46,7 @@
     {
       "cell_type": "code",
       "source": [
+        "## Mount google drive\n",
         "from google.colab import drive\n",
         "drive.mount(\"/content/drive\")"
       ],
@@ -89,6 +71,7 @@
     {
       "cell_type": "code",
       "source": [
+        "## Importing the Libraries\n",
         "import numpy as np\n",
         "import pandas as pd\n",
         "import matplotlib.pyplot as plt\n",
@@ -110,7 +93,16 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## **Loading Dataset**"
+        "# **Data Preparation**"
+      ],
+      "metadata": {
+        "id": "qtMpN1BwlJm9"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### **Dataset Loading**"
       ],
       "metadata": {
         "id": "x88y1ZcmZ-X_"
@@ -406,7 +398,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## **Data Visualization**"
+        "### **Data Visualization**"
       ],
       "metadata": {
         "id": "YaVWbAH2gFY2"
@@ -425,7 +417,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 659
+          "height": 829
         },
         "id": "8U9N-ttw5lI3",
         "outputId": "0b961aec-fc2c-4ec7-e662-a034632629bb"
@@ -447,7 +439,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## **Data Preprocessing**"
+        "### **Data Preprocessing**"
       ],
       "metadata": {
         "id": "qU-29V0L7XrS"
@@ -566,9 +558,35 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "BATCH_SIZE"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Ooe6wlgVRJFt",
+        "outputId": "e772bdff-dca5-4ad9-a425-9e89145518e6"
+      },
+      "execution_count": 59,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "32"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 59
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "Ooe6wlgVRJFt"
+        "id": "8wF8IZ-WVui1"
       },
       "execution_count": null,
       "outputs": []
